kub-multi-apps/infra/k8s/auth-api-dpy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-dpy
spec:
  replicas: 1
  selector:
    matchLabels:
      api: auth
  template:
    metadata:
      labels:
        api: auth
    spec:
      containers:
        - name: auth-api-pd
          image: marknjo/kub-test-auth-api
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "1.5Gi"
