kub-multi-apps/infra/k8s/tasks-api-dpy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-api-dpy
spec:
  replicas: 1
  selector:
    matchLabels:
      api: tasks
  template:
    metadata:
      name: tasks-pod
      labels:
        api: tasks
    spec:
      containers:
        - name: tasks-api-cnt
          image: marknjo/kub-test-tasks-api
          resources:
            limits:
              cpu: "500m"
              memory: "1.5Gi"
          volumeMounts:
            - mountPath: /apps/tasks
              name: tasks-data-vol
          imagePullPolicy: Never
          ports:
            - containerPort: 8001

      volumes:
        - name: tasks-data-vol
          hostPath:
            path: /data
            type: DirectoryOrCreate
