kub-multi-apps/infra/k8s/users-api-dpy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-dpy
spec: 
  replicas: 1
  selector:
    matchLabels:
      api: users
  template:
    metadata:
      name: users-api-pod
      labels:
        api: users
    spec:
      containers:
        - name: users-api-cnt
          image: marknjo/kub-test-users-api
          imagePullPolicy: Never
          ports:
            - containerPort: 8002
          resources:
            limits:
              cpu: "500m"
              memory: "1.5Gi"
