kub-multi-apps/infra/k8s/auth-api-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auth-api-srv
spec: 
  selector:
    api: auth
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
