kub-multi-apps/infra/k8s/frontend-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-srv
spec: 
  selector: 
    app: frontend
  type: ClusterIP
  ports: 
    - protocol: TCP
      port: 8003
      targetPort: 8003
