kub-multi-apps/infra/k8s/tasks-api-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-api-srv
spec:
  selector:
    api: tasks
  type: NodePort
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
