kub-multi-apps/infra/k8s/users-api-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-srv
spec: 
  selector:
    api: users
  type: NodePort
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
